# realtime-pdf

./: .gitignore  LICENSE  README.md  next.config.js  package.json  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml  release.yml
docs/plans/: 2026-04-16-pdf-icon-design.md  2026-04-16-watch-history-design.md  2026-04-16-watch-history-implementation.md
scripts/: tauri-before-dev.mjs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/app/: globals.css  layout.tsx  page.test.ts  page.tsx
src/components/: PdfViewer.test.ts  PdfViewer.tsx  UpdateChecker.tsx
src/lib/: pdf.test.ts  pdf.ts  tauri-config.test.ts  update.test.ts  update.ts
