[package]
name = "realtime-pdf"
version = "0.1.4"
description = "Desktop PDF viewer that auto-reloads when the watched file changes"
authors = ["gwddeveloper"]
edition = "2024"
autobins = false

[lib]
name = "realtime_pdf_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "Realtime-PDF"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
notify = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["devtools", "protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
